Add tryCollectorsFiltering