@@ -1,26 +1,37 @@
 package demo;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
 
 public class TryFeatureStreamJava9 {
 
 	public static void main(String[] args) {
 		List<Runnable> list = new ArrayList<Runnable>();
-		list.add(TryFeatureStreamJava9::tryBasic);
+		list.add(TryFeatureStreamJava9::tryCollectorsFiltering);
 
 		for (var r : list) {
 			r.run();
 		}
 	}
 	
-	private static void tryBasic() {
-		Arrays.asList("029", "52", "913", "472").stream()
-			.filter(e -> Integer.parseInt(e) < 500 )
-			.map(e -> String.format("(%s)", e))
-			.forEach(System.out::print);
-		System.out.println();
+	private static void tryCollectorsFiltering() {
+
+	    List<Integer> numbers = List.of(1, 2, 3, 5, 5, 7);
+
+	    Map<Integer, Long> result = numbers.stream()
+	      .filter(val -> val > 3)
+	      .collect(Collectors.groupingBy(i -> i, Collectors.counting()));
+
+	    System.out.println(result);
+
+	    result = numbers.stream()
+	      .collect(Collectors.groupingBy(i -> i,
+	        Collectors.filtering(val -> val > 3, Collectors.counting())));
+
+	    System.out.println(result);
+	    
 	}
 
 }
